crates/language-v2/tests/src/fail/parsing/missing_field/test.stderr
error: Expected field: 'title'.
  --> src/fail/parsing/missing_field/test.rs:12:9
   |
12 |         topics = []
   |         ^^^^^^
